src/lexer.c
#line 1 "src/lexer.rl"
/** Zed A. Shaw -- A weird assembler.  Copyright 2008.  */

#include "module.h"
#include "grammar.h"
#include "tokenize.h"
#include "grammar.c"
#include "ops.h"
#include "error.h"

#line 177 "src/lexer.rl"



#line 16 "src/lexer.c"
static const int lexer_start = 12;
static const int lexer_error = 0;

static const int lexer_en_c_comment = 10;
static const int lexer_en_main = 12;

#line 180 "src/lexer.rl"

int Module_compile(Module *state, char *p, size_t length)
{
	int cs, act;
	char *ts, *te = 0;
    void *pParser = ParseAlloc(malloc);
    Token *tk = NULL;

	
#line 33 "src/lexer.c"
	{
	cs = lexer_start;
	ts = 0;
	te = 0;
	act = 0;
	}
#line 189 "src/lexer.rl"

    char *pe = p+length;
    char *eof = p+length;

    
#line 46 "src/lexer.c"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
tr2:
#line 162 "src/lexer.rl"
	{te = p+1;{ STR() }}
	goto st12;
tr5:
#line 13 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
#line 168 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr8:
#line 158 "src/lexer.rl"
	{te = p+1;{ CHR() }}
	goto st12;
tr12:
#line 172 "src/lexer.rl"
	{{p = ((te))-1;}{ INT() }}
	goto st12;
tr14:
#line 169 "src/lexer.rl"
	{te = p+1;{ {goto st10;} }}
	goto st12;
tr20:
#line 165 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr21:
#line 13 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
#line 165 "src/lexer.rl"
	{te = p+1;}
	goto st12;
tr22:
#line 30 "src/lexer.rl"
	{te = p+1;{ SYM(PERCENT) }}
	goto st12;
tr23:
#line 25 "src/lexer.rl"
	{te = p+1;{ SYM(LPAREN) }}
	goto st12;
tr24:
#line 26 "src/lexer.rl"
	{te = p+1;{ SYM(RPAREN) }}
	goto st12;
tr25:
#line 27 "src/lexer.rl"
	{te = p+1;{ SYM(COMMA) }}
	goto st12;
tr27:
#line 24 "src/lexer.rl"
	{te = p+1;{ SYM(DOT) }}
	goto st12;
tr30:
#line 28 "src/lexer.rl"
	{te = p+1;{ SYM(COLON) }}
	goto st12;
tr31:
#line 31 "src/lexer.rl"
	{te = p+1;{ SYM(EOL) }}
	goto st12;
tr32:
#line 29 "src/lexer.rl"
	{te = p+1;{ SYM(EQ) }}
	goto st12;
tr58:
#line 172 "src/lexer.rl"
	{te = p;p--;{ INT() }}
	goto st12;
tr60:
#line 173 "src/lexer.rl"
	{te = p;p--;{ FLOAT() }}
	goto st12;
tr62:
#line 174 "src/lexer.rl"
	{te = p;p--;{ HEX() }}
	goto st12;
tr63:
#line 1 "src/lexer.rl"
	{	switch( act ) {
	case 9:
	{{p = ((te))-1;} KW(FUNCTION) }
	break;
	case 10:
	{{p = ((te))-1;} KW(END) }
	break;
	case 11:
	{{p = ((te))-1;}REG(NOREG) }
	break;
	case 12:
	{{p = ((te))-1;}REG(R0) }
	break;
	case 13:
	{{p = ((te))-1;}REG(R1) }
	break;
	case 14:
	{{p = ((te))-1;}REG(R2) }
	break;
	case 15:
	{{p = ((te))-1;}REG(V0) }
	break;
	case 16:
	{{p = ((te))-1;}REG(V1) }
	break;
	case 17:
	{{p = ((te))-1;}REG(V2) }
	break;
	case 18:
	{{p = ((te))-1;}REG(FP) }
	break;
	case 19:
	{{p = ((te))-1;} REG(RET) }
	break;
	case 20:
	{{p = ((te))-1;} TYPE(i) }
	break;
	case 21:
	{{p = ((te))-1;} TYPE(ui) }
	break;
	case 22:
	{{p = ((te))-1;} TYPE(l) }
	break;
	case 23:
	{{p = ((te))-1;} TYPE(ul) }
	break;
	case 24:
	{{p = ((te))-1;} TYPE(p) }
	break;
	case 25:
	{{p = ((te))-1;} TYPE(f) }
	break;
	case 26:
	{{p = ((te))-1;} TYPE(d) }
	break;
	case 27:
	{{p = ((te))-1;} TYPE(v) }
	break;
	case 28:
	{{p = ((te))-1;} TYPE(c) }
	break;
	case 29:
	{{p = ((te))-1;} TYPE(uc) }
	break;
	case 30:
	{{p = ((te))-1;} TYPE(s) }
	break;
	case 31:
	{{p = ((te))-1;} TYPE(us) }
	break;
	case 32:
	{{p = ((te))-1;}OP(addr) }
	break;
	case 33:
	{{p = ((te))-1;}OP(addi) }
	break;
	case 34:
	{{p = ((te))-1;}OP(addxr) }
	break;
	case 35:
	{{p = ((te))-1;}OP(addxi) }
	break;
	case 36:
	{{p = ((te))-1;}OP(addcr) }
	break;
	case 37:
	{{p = ((te))-1;}OP(addci) }
	break;
	case 38:
	{{p = ((te))-1;}OP(subr) }
	break;
	case 39:
	{{p = ((te))-1;}OP(subi) }
	break;
	case 40:
	{{p = ((te))-1;}OP(subxr) }
	break;
	case 41:
	{{p = ((te))-1;}OP(subxi) }
	break;
	case 42:
	{{p = ((te))-1;}OP(subcr) }
	break;
	case 43:
	{{p = ((te))-1;}OP(subci) }
	break;
	case 44:
	{{p = ((te))-1;}OP(rsbr) }
	break;
	case 45:
	{{p = ((te))-1;}OP(rsbi) }
	break;
	case 46:
	{{p = ((te))-1;}OP(mulr) }
	break;
	case 47:
	{{p = ((te))-1;}OP(muli) }
	break;
	case 48:
	{{p = ((te))-1;}OP(hmulr) }
	break;
	case 49:
	{{p = ((te))-1;}OP(hmuli) }
	break;
	case 50:
	{{p = ((te))-1;}OP(divr) }
	break;
	case 51:
	{{p = ((te))-1;}OP(divi) }
	break;
	case 52:
	{{p = ((te))-1;}OP(modr) }
	break;
	case 53:
	{{p = ((te))-1;}OP(modi) }
	break;
	case 54:
	{{p = ((te))-1;}OP(andr) }
	break;
	case 55:
	{{p = ((te))-1;}OP(andi) }
	break;
	case 56:
	{{p = ((te))-1;}OP(orr) }
	break;
	case 57:
	{{p = ((te))-1;}OP(ori) }
	break;
	case 58:
	{{p = ((te))-1;}OP(xorr) }
	break;
	case 59:
	{{p = ((te))-1;}OP(xori) }
	break;
	case 60:
	{{p = ((te))-1;}OP(lshr) }
	break;
	case 61:
	{{p = ((te))-1;}OP(lshi) }
	break;
	case 62:
	{{p = ((te))-1;}OP(rshr) }
	break;
	case 63:
	{{p = ((te))-1;}OP(rshi) }
	break;
	case 64:
	{{p = ((te))-1;}OP(negr) }
	break;
	case 65:
	{{p = ((te))-1;}OP(notr) }
	break;
	case 66:
	{{p = ((te))-1;}OP(ltr) }
	break;
	case 67:
	{{p = ((te))-1;}OP(lti) }
	break;
	case 68:
	{{p = ((te))-1;}OP(ler) }
	break;
	case 69:
	{{p = ((te))-1;}OP(lei) }
	break;
	case 70:
	{{p = ((te))-1;}OP(gtr) }
	break;
	case 71:
	{{p = ((te))-1;}OP(gti) }
	break;
	case 72:
	{{p = ((te))-1;}OP(ger) }
	break;
	case 73:
	{{p = ((te))-1;}OP(gei) }
	break;
	case 74:
	{{p = ((te))-1;}OP(eqr) }
	break;
	case 75:
	{{p = ((te))-1;}OP(eqi) }
	break;
	case 76:
	{{p = ((te))-1;}OP(ner) }
	break;
	case 77:
	{{p = ((te))-1;}OP(nei) }
	break;
	case 78:
	{{p = ((te))-1;}OP(unltr) }
	break;
	case 79:
	{{p = ((te))-1;}OP(unler) }
	break;
	case 80:
	{{p = ((te))-1;}OP(ungtr) }
	break;
	case 81:
	{{p = ((te))-1;}OP(unger) }
	break;
	case 82:
	{{p = ((te))-1;}OP(uneqr) }
	break;
	case 83:
	{{p = ((te))-1;}OP(ltgtr) }
	break;
	case 84:
	{{p = ((te))-1;}OP(ordr) }
	break;
	case 85:
	{{p = ((te))-1;}OP(unordr) }
	break;
	case 86:
	{{p = ((te))-1;}OP(movr) }
	break;
	case 87:
	{{p = ((te))-1;}OP(movi) }
	break;
	case 88:
	{{p = ((te))-1;}OP(hton) }
	break;
	case 89:
	{{p = ((te))-1;}OP(ntoh) }
	break;
	case 90:
	{{p = ((te))-1;}OP(ldr) }
	break;
	case 91:
	{{p = ((te))-1;}OP(ldi) }
	break;
	case 92:
	{{p = ((te))-1;}OP(ldxr) }
	break;
	case 93:
	{{p = ((te))-1;}OP(ldxi) }
	break;
	case 94:
	{{p = ((te))-1;}OP(str) }
	break;
	case 95:
	{{p = ((te))-1;}OP(sti) }
	break;
	case 96:
	{{p = ((te))-1;}OP(stxr) }
	break;
	case 97:
	{{p = ((te))-1;}OP(stxi) }
	break;
	case 98:
	{{p = ((te))-1;}OP(prepare) }
	break;
	case 99:
	{{p = ((te))-1;}OP(pusharg) }
	break;
	case 100:
	{{p = ((te))-1;}OP(getarg) }
	break;
	case 101:
	{{p = ((te))-1;}OP(retval) }
	break;
	case 102:
	{{p = ((te))-1;}OP(blti) }
	break;
	case 103:
	{{p = ((te))-1;}OP(blei) }
	break;
	case 104:
	{{p = ((te))-1;}OP(bgti) }
	break;
	case 105:
	{{p = ((te))-1;}OP(bgei) }
	break;
	case 106:
	{{p = ((te))-1;}OP(beqi) }
	break;
	case 107:
	{{p = ((te))-1;}OP(bnei) }
	break;
	case 108:
	{{p = ((te))-1;}OP(bmsi) }
	break;
	case 109:
	{{p = ((te))-1;}OP(bmci) }
	break;
	case 110:
	{{p = ((te))-1;}OP(jmpi) }
	break;
	case 111:
	{{p = ((te))-1;}OP(jmpr) }
	break;
	case 113:
	{{p = ((te))-1;} OP(calli); NO_LEAF(calli); }
	break;
	case 114:
	{{p = ((te))-1;}OP(callr); NO_LEAF(callr); }
	break;
	case 116:
	{{p = ((te))-1;}OP(finishr); NO_LEAF(finishr); }
	break;
	case 117:
	{{p = ((te))-1;} IDENT() }
	break;
	}
	}
	goto st12;
tr64:
#line 154 "src/lexer.rl"
	{te = p+1;{ LABEL() }}
	goto st12;
tr65:
#line 153 "src/lexer.rl"
	{te = p;p--;{ IDENT() }}
	goto st12;
tr118:
#line 57 "src/lexer.rl"
	{te = p;p--;{ TYPE(c) }}
	goto st12;
tr127:
#line 55 "src/lexer.rl"
	{te = p;p--;{ TYPE(d) }}
	goto st12;
tr142:
#line 54 "src/lexer.rl"
	{te = p;p--;{ TYPE(f) }}
	goto st12;
tr150:
#line 149 "src/lexer.rl"
	{te = p;p--;{OP(finish); NO_LEAF(finish); }}
	goto st12;
tr179:
#line 49 "src/lexer.rl"
	{te = p;p--;{ TYPE(i) }}
	goto st12;
tr186:
#line 51 "src/lexer.rl"
	{te = p;p--;{ TYPE(l) }}
	goto st12;
tr236:
#line 53 "src/lexer.rl"
	{te = p;p--;{ TYPE(p) }}
	goto st12;
tr254:
#line 143 "src/lexer.rl"
	{te = p;p--;{OP(ret) }}
	goto st12;
tr264:
#line 59 "src/lexer.rl"
	{te = p;p--;{ TYPE(s) }}
	goto st12;
tr290:
#line 58 "src/lexer.rl"
	{te = p;p--;{ TYPE(uc) }}
	goto st12;
tr294:
#line 50 "src/lexer.rl"
	{te = p;p--;{ TYPE(ui) }}
	goto st12;
tr297:
#line 52 "src/lexer.rl"
	{te = p;p--;{ TYPE(ul) }}
	goto st12;
tr318:
#line 60 "src/lexer.rl"
	{te = p;p--;{ TYPE(us) }}
	goto st12;
tr323:
#line 56 "src/lexer.rl"
	{te = p;p--;{ TYPE(v) }}
	goto st12;
st12:
#line 1 "src/lexer.rl"
	{ts = 0;}
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 1 "src/lexer.rl"
	{ts = p;}
#line 527 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr21;
		case 34: goto st1;
		case 35: goto st3;
		case 37: goto tr22;
		case 39: goto st4;
		case 40: goto tr23;
		case 41: goto tr24;
		case 44: goto tr25;
		case 45: goto st6;
		case 46: goto tr27;
		case 47: goto st8;
		case 48: goto tr29;
		case 58: goto tr30;
		case 59: goto tr31;
		case 61: goto tr32;
		case 70: goto st18;
		case 78: goto st19;
		case 82: goto st23;
		case 86: goto st25;
		case 95: goto tr33;
		case 97: goto st26;
		case 98: goto st37;
		case 99: goto st51;
		case 100: goto st57;
		case 101: goto st64;
		case 102: goto st67;
		case 103: goto st82;
		case 104: goto st88;
		case 105: goto st94;
		case 106: goto st96;
		case 108: goto st99;
		case 109: goto st110;
		case 110: goto st116;
		case 111: goto st123;
		case 112: goto st126;
		case 114: goto st138;
		case 115: goto st146;
		case 117: goto st156;
		case 118: goto st181;
		case 120: goto st184;
	}
	if ( (*p) < 65 ) {
		if ( (*p) < 49 ) {
			if ( 33 <= (*p) && (*p) <= 43 )
				goto st0;
		} else if ( (*p) > 57 ) {
			if ( 60 <= (*p) && (*p) <= 64 )
				goto st0;
		} else
			goto tr10;
	} else if ( (*p) > 90 ) {
		if ( (*p) < 107 ) {
			if ( 91 <= (*p) && (*p) <= 96 )
				goto st0;
		} else if ( (*p) > 122 ) {
			if ( 123 <= (*p) && (*p) <= 126 )
				goto st0;
		} else
			goto tr33;
	} else
		goto tr33;
	goto tr20;
st0:
cs = 0;
	goto _out;
tr1:
#line 13 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
	goto st1;
st1:
	if ( ++p == pe )
		goto _test_eof1;
case 1:
#line 602 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr1;
		case 34: goto tr2;
		case 92: goto st2;
	}
	goto st1;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	if ( (*p) == 10 )
		goto tr1;
	goto st1;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	if ( (*p) == 10 )
		goto tr5;
	goto st3;
tr7:
#line 13 "src/lexer.rl"
	{state->curline++; SYM(EOL)}
	goto st4;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
#line 631 "src/lexer.c"
	switch( (*p) ) {
		case 10: goto tr7;
		case 39: goto tr8;
		case 92: goto st5;
	}
	goto st4;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	if ( (*p) == 10 )
		goto tr7;
	goto st4;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto st0;
tr10:
#line 1 "src/lexer.rl"
	{te = p+1;}
	goto st13;
st13:
	if ( ++p == pe )
		goto _test_eof13;
case 13:
#line 660 "src/lexer.c"
	if ( (*p) == 46 )
		goto st7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto tr58;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st14;
	goto tr12;
st14:
	if ( ++p == pe )
		goto _test_eof14;
case 14:
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st14;
	goto tr60;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
	if ( (*p) == 42 )
		goto tr14;
	goto st0;
tr29:
#line 1 "src/lexer.rl"
	{te = p+1;}
	goto st15;
st15:
	if ( ++p == pe )
		goto _test_eof15;
case 15:
#line 695 "src/lexer.c"
	switch( (*p) ) {
		case 46: goto st7;
		case 120: goto st9;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr10;
	goto tr58;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st16;
	} else
		goto st16;
	goto tr12;
st16:
	if ( ++p == pe )
		goto _test_eof16;
case 16:
	if ( (*p) < 65 ) {
		if ( 48 <= (*p) && (*p) <= 57 )
			goto st16;
	} else if ( (*p) > 70 ) {
		if ( 97 <= (*p) && (*p) <= 102 )
			goto st16;
	} else
		goto st16;
	goto tr62;
tr33:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 153 "src/lexer.rl"
	{act = 117;}
	goto st17;
tr66:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 45 "src/lexer.rl"
	{act = 18;}
	goto st17;
tr70:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 38 "src/lexer.rl"
	{act = 11;}
	goto st17;
tr71:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 39 "src/lexer.rl"
	{act = 12;}
	goto st17;
tr72:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 40 "src/lexer.rl"
	{act = 13;}
	goto st17;
tr73:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 41 "src/lexer.rl"
	{act = 14;}
	goto st17;
tr75:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 46 "src/lexer.rl"
	{act = 19;}
	goto st17;
tr76:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 42 "src/lexer.rl"
	{act = 15;}
	goto st17;
tr77:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 43 "src/lexer.rl"
	{act = 16;}
	goto st17;
tr78:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 44 "src/lexer.rl"
	{act = 17;}
	goto st17;
tr83:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 64 "src/lexer.rl"
	{act = 33;}
	goto st17;
tr84:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 63 "src/lexer.rl"
	{act = 32;}
	goto st17;
tr89:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 68 "src/lexer.rl"
	{act = 37;}
	goto st17;
tr91:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 67 "src/lexer.rl"
	{act = 36;}
	goto st17;
tr92:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 66 "src/lexer.rl"
	{act = 35;}
	goto st17;
tr93:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 65 "src/lexer.rl"
	{act = 34;}
	goto st17;
tr95:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 86 "src/lexer.rl"
	{act = 55;}
	goto st17;
tr96:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 85 "src/lexer.rl"
	{act = 54;}
	goto st17;
tr103:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 137 "src/lexer.rl"
	{act = 106;}
	goto st17;
tr106:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 136 "src/lexer.rl"
	{act = 105;}
	goto st17;
tr107:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 135 "src/lexer.rl"
	{act = 104;}
	goto st17;
tr110:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 134 "src/lexer.rl"
	{act = 103;}
	goto st17;
tr111:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 133 "src/lexer.rl"
	{act = 102;}
	goto st17;
tr114:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 140 "src/lexer.rl"
	{act = 109;}
	goto st17;
tr115:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 139 "src/lexer.rl"
	{act = 108;}
	goto st17;
tr117:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 138 "src/lexer.rl"
	{act = 107;}
	goto st17;
tr123:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 147 "src/lexer.rl"
	{act = 113;}
	goto st17;
tr124:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 148 "src/lexer.rl"
	{act = 114;}
	goto st17;
tr126:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 57 "src/lexer.rl"
	{act = 28;}
	goto st17;
tr131:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 82 "src/lexer.rl"
	{act = 51;}
	goto st17;
tr132:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 81 "src/lexer.rl"
	{act = 50;}
	goto st17;
tr136:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 55 "src/lexer.rl"
	{act = 26;}
	goto st17;
tr139:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 35 "src/lexer.rl"
	{act = 10;}
	goto st17;
tr140:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 106 "src/lexer.rl"
	{act = 75;}
	goto st17;
tr141:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 105 "src/lexer.rl"
	{act = 74;}
	goto st17;
tr151:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 150 "src/lexer.rl"
	{act = 116;}
	goto st17;
tr154:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 54 "src/lexer.rl"
	{act = 25;}
	goto st17;
tr160:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 34 "src/lexer.rl"
	{act = 9;}
	goto st17;
tr163:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 104 "src/lexer.rl"
	{act = 73;}
	goto st17;
tr164:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 103 "src/lexer.rl"
	{act = 72;}
	goto st17;
tr168:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 131 "src/lexer.rl"
	{act = 100;}
	goto st17;
tr169:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 102 "src/lexer.rl"
	{act = 71;}
	goto st17;
tr170:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 101 "src/lexer.rl"
	{act = 70;}
	goto st17;
tr175:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 80 "src/lexer.rl"
	{act = 49;}
	goto st17;
tr176:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 79 "src/lexer.rl"
	{act = 48;}
	goto st17;
tr178:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 119 "src/lexer.rl"
	{act = 88;}
	goto st17;
tr181:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 49 "src/lexer.rl"
	{act = 20;}
	goto st17;
tr184:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 141 "src/lexer.rl"
	{act = 110;}
	goto st17;
tr185:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 142 "src/lexer.rl"
	{act = 111;}
	goto st17;
tr192:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 122 "src/lexer.rl"
	{act = 91;}
	goto st17;
tr193:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 121 "src/lexer.rl"
	{act = 90;}
	goto st17;
tr195:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 124 "src/lexer.rl"
	{act = 93;}
	goto st17;
tr196:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 123 "src/lexer.rl"
	{act = 92;}
	goto st17;
tr197:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 100 "src/lexer.rl"
	{act = 69;}
	goto st17;
tr198:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 99 "src/lexer.rl"
	{act = 68;}
	goto st17;
tr200:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 51 "src/lexer.rl"
	{act = 22;}
	goto st17;
tr202:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 92 "src/lexer.rl"
	{act = 61;}
	goto st17;
tr203:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 91 "src/lexer.rl"
	{act = 60;}
	goto st17;
tr205:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 98 "src/lexer.rl"
	{act = 67;}
	goto st17;
tr206:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 97 "src/lexer.rl"
	{act = 66;}
	goto st17;
tr208:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 114 "src/lexer.rl"
	{act = 83;}
	goto st17;
tr213:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 84 "src/lexer.rl"
	{act = 53;}
	goto st17;
tr214:
#line 1 "src/lexer.rl"
	{te = p+1;}
#line 83 "src/lexer.rl"
	{act = 52;}
	goto st17;
tr215:
